fix: activate cgroup and experimental vm functions